src/App.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden;
  font-family: 'Mukta', sans-serif;
}

select:focus {
  outline: none;
}
button:hover {
  background-color: red;
  height: 26px;
}

.tooltip {
  position: absolute;
  border: 1px solid black;
  background-color: white;
  color: black;
  padding: 0px 10px;
}

.toolbar {
  display: flex;
  flex-direction: row;
  background-color: lightgray;
  justify-content: space-between;
  align-items: center;
  padding: 0px 20px;
  height: 37px;
}

.toolbar-right {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;

}

.toolbar-left {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.pieces {
  margin-top: -20px;
}

.state-filter {
    font-family: 'Mukta', sans-serif;
    border: 1px solid black;
    text-align: center;
    background-color: whitesmoke;
    height: 26px;
}

.reset-btn {
    font-family: 'Mukta', sans-serif;
    border: 1px solid black;
    max-height: 26px;
    background-color: whitesmoke;
}

